# advent_of_code_2021

golang/01/: 01.go
golang/02/: 02.go  go.mod  test_input
rust/: Cargo.toml
rust/inputs/: 22_example_simple  23_example
