[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/bin/01/main.rs"

[[bin]]
name = "02"
path = "src/bin/02/main.rs"

[[bin]]
name = "03"
path = "src/bin/03/main.rs"

[[bin]]
name = "04"
path = "src/bin/04/main.rs"

[[bin]]
name = "05"
path = "src/bin/05/main.rs"

[[bin]]
name = "06"
path = "src/bin/06/main.rs"

[[bin]]
name = "07"
path = "src/bin/07/main.rs"

[[bin]]
name = "08"
path = "src/bin/08/main.rs"

[dependencies]
chrono = "0.4"
