[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/bin/01/main.rs"

[[bin]]
name = "02"
path = "src/bin/02/main.rs"

[[bin]]
name = "03"
path = "src/bin/03/main.rs"

[[bin]]
name = "04"
path = "src/bin/04/main.rs"

[[bin]]
name = "05"
path = "src/bin/05/main.rs"

[[bin]]
name = "06"
path = "src/bin/06/main.rs"

[[bin]]
name = "07"
path = "src/bin/07/main.rs"

[[bin]]
name = "08"
path = "src/bin/08/main.rs"

[[bin]]
name = "09"
path = "src/bin/09/main.rs"

[[bin]]
name = "10"
path = "src/bin/10/main.rs"

[[bin]]
name = "11"
path = "src/bin/11/main.rs"

[[bin]]
name = "12"
path = "src/bin/12/main.rs"

[[bin]]
name = "13"
path = "src/bin/13/main.rs"

[[bin]]
name = "14"
path = "src/bin/14/main.rs"

[[bin]]
name = "15"
path = "src/bin/15/main.rs"

[[bin]]
name = "16"
path = "src/bin/16/main.rs"

[[bin]]
name = "17"
path = "src/bin/17/main.rs"

[[bin]]
name = "18"
path = "src/bin/18/main.rs"

[[bin]]
name = "19"
path = "src/bin/19/main.rs"

[[bin]]
name = "20"
path = "src/bin/20/main.rs"

[dependencies]
chrono = "0.4"
bitvec = "0.22.3"
itertools = "0.10.3"
